# CppGame

./: .gitignore  CMakeLists.txt
Core/: main.cpp
Core/Context/: GameContext.cpp  GameContext.hpp
Core/Loop/: Game.cpp  Game.hpp
GameElements/: Directions.hpp  Entities.cpp  Entities.hpp  Layout.cpp  Layout.hpp  Map.cpp  Map.hpp
GameElements/Entities/: Player.cpp  Player.hpp
GameElements/Entities/Player/: Player.cpp  Player.hpp
Logic/: Logic.hpp
Logic/Game/: NewGameLogic.cpp  NewGameLogic.hpp
Logic/Menu/: MenuLogic.cpp  MenuLogic.hpp
Persistance/: Save.cpp  Save.hpp
Persistance/SaveData/: Data.cpp  Data.hpp
Renderer/: Renderer.cpp  Renderer.hpp
Renderer/Camera/: Camera.hpp
Renderer/Canvas/: Canvas.cpp  Canvas.hpp
Renderer/Canvas/Graphics/: GraphicElement.hpp  TileMap.cpp  TileMap.hpp
Renderer/TextureManager/: TextureManager.cpp  TextureManager.hpp
Resources/Maps/FirstMap/: InitialPoint_layer_1.csv  InitialPoint_layer_2.csv  InitialPoint_layer_3.csv  InitialPoint_layer_4.csv  InitialPoint_layer_5.csv  TileMap.txt
Utils/: Vec2.hpp
